GNOME Bugzilla – Bug 672880
udp: Fix compiling with mingw
Last modified: 2012-03-27 09:43:21 UTC
Compiling udpsrc and multiudpsink fails with mingw, because sys/socket.h is included unconditionally (it doesn't exist in mingw).
Created attachment 210663 [details] [review] Fix compiling with mingw
commit eccb5b8fedeb6b4301d36ae3e3a6a6693a4cf8f3 Author: Raimo Järvi <raimo.jarvi@gmail.com> Date: Tue Mar 27 00:02:08 2012 +0300 udp: Fix compiling with mingw. https://bugzilla.gnome.org/show_bug.cgi?id=672880