udp: Fix compiling with mingw.

https://bugzilla.gnome.org/show_bug.cgi?id=672880