gst/udp/gstudpsrc.c
@@ -112,7 +112,9 @@
 
 #include <gst/net/gstnetaddressmeta.h>
 
+#ifdef HAVE_SYS_SOCKET_H
 #include <sys/socket.h>
+#endif
 
 GST_DEBUG_CATEGORY_STATIC (udpsrc_debug);
 #define GST_CAT_DEFAULT (udpsrc_debug)
